# freally-av

./: .gitignore  ATTRIBUTIONS.txt  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  THIRD-PARTY-DATA.md  THIRD-PARTY-NPM.txt  THIRD-PARTY-RUST.txt  YARA-RULE-AUTHORS.txt  about.hbs  about.toml  deny.toml  release-notes-v0.7.13.md
apps/mythodikal/src-tauri/: Cargo.toml  entitlements.plist  installer-hooks.nsh  tauri.conf.json
apps/mythodikal/src-tauri/capabilities/: main.json
apps/mythodikal/src-tauri/icons/: icon.icns
apps/mythodikal/src-tauri/src/: lib.rs  main.rs  tray.rs
assets/brand/: README.md
crates/freallyctl/: Cargo.toml
crates/freallyctl/src/: main.rs
crates/freallyctl/src/commands/: feed.rs  mod.rs  quarantine.rs  scan.rs  shields.rs
crates/mythctl/: Cargo.toml
crates/mythctl/src/: main.rs
crates/mythctl/src/commands/: feed.rs  mod.rs  quarantine.rs  scan.rs  shields.rs
crates/mythkernel/: Cargo.toml
crates/mythkernel/benches/: hash.rs  walk.rs  win_mft.rs
crates/mythkernel/migrations/: 0001_initial.sql  0005_verdict_cache.sql  0006_ephemeral_allowlist.sql  0007_user_iocs.sql  0009_file_state.sql  0010_scheduled_scans.sql
crates/mythkernel/src/: archive_scan.rs  config.rs  db.rs  diagnostics.rs  diff.rs  engine.rs  error.rs  eta.rs  exclusions.rs  findings.rs  hasher.rs  hasher_fastcdc.rs  hasher_mmap.rs  hasher_sparse.rs  heuristics_scan.rs  history.rs  lib.rs  logging.rs  process_scan.rs  quarantine.rs  registry_scan.rs  scan.rs  scheduler.rs  sysload.rs  telemetry.rs  throttle.rs
crates/mythkernel/src/archive_safety/: bomb_guard.rs  detonate.rs  magic.rs  mod.rs  password.rs  recursion.rs  sfx.rs
crates/mythkernel/src/browser/: autofill_inventory.rs  cookie_exfil.rs  downloads.rs  extensions.rs  idn_spoof.rs  malvert.rs  master_key_watch.rs  mime_mismatch.rs  password_store_integrity.rs
crates/mythkernel/src/detect/: active_findings.rs  anomaly.rs  authenticode.rs  behavior_dsl.rs  bloom.rs  byovd.rs  crc32_set_file.rs  cuckoo.rs  dev_publisher_allowlist.rs  dex.rs  dotnet_il.rs  dual_key_gate.rs  eicar.rs  elf_hardening.rs  entropy.rs  ephemeral_allowlist.rs  extension_policy.rs  fat_binary.rs  file_mutation.rs  goodware_allowlist.rs  hash_blacklist.rs  hash_lookup_explain.rs  hash_set_file.rs  header_parse.rs  heuristics.rs  honeyfiles.rs  macho_sig.rs  mod.rs  net_ioc.rs  package_manager_allowlist.rs  packer.rs  partial_match.rs  platform_store_allowlist.rs  publisher.rs  rollout.rs  sbom_allowlist.rs  stale_temp.rs  supply_chain.rs  uefi.rs  upx_unpack.rs  (+4 more)
crates/mythkernel/src/detect/rules/: persistence_write.toml  process_chain_office_lolbin.toml  script_host_suspicious.toml
crates/mythkernel/src/doc_payload/: lnk.rs  pdf_actions.rs  pdf_streams.rs  rtf_obj.rs
crates/mythkernel/src/email/: eml.rs  mbox.rs  mod.rs  msg.rs
crates/mythkernel/src/exempt/: mod.rs  per_app.rs
crates/mythkernel/src/ipc/: linfan.rs  macesf.rs  mod.rs  winflt.rs
crates/mythkernel/src/memory_scan/: macho_load.rs  mod.rs  reflective.rs  regions.rs  shellcode.rs  yara_sweep.rs
crates/mythkernel/src/office/: cfb.rs  crypto.rs  excel.rs  mod.rs  vba.rs
crates/mythkernel/src/payload_anomaly/: eof_trailer.rs  iso_autorun.rs  lnk_anomaly.rs  mod.rs  stego.rs
crates/mythkernel/src/platform/: mod.rs  wsl.rs
crates/mythkernel/src/platform/linux/: codesign.rs  mod.rs
crates/mythkernel/src/platform/linux/journal/: cursor.rs  event.rs  ffi.rs  flags.rs  mod.rs  subscriber.rs
crates/mythkernel/src/platform/mac/: autostart.rs  fsevents.rs  mod.rs
crates/mythkernel/src/platform/mac/journal/: cursor.rs  ffi.rs  mod.rs  subscriber.rs
crates/mythkernel/src/platform/win/: autostart.rs  codesign.rs  mod.rs  volumes.rs
crates/mythkernel/src/platform/win/journal/: cursor.rs  event.rs  mod.rs  subscriber.rs
crates/mythkernel/src/process_integrity/: ancestry.rs  autopsy.rs  core_dump.rs  dll_search_order.rs  env_audit.rs  hollowing.rs  image_hash.rs  io_counters.rs  mod.rs  net_counters.rs  thread_hijack.rs
crates/mythkernel/src/realtime/: mod.rs  shields.rs
crates/mythkernel/src/scheduler/: wake.rs
crates/mythkernel/src/store/: baseline.rs  chunks.rs  mod.rs
crates/mythkernel/src/supply_chain/: cargo.rs  container.rs  direnv.rs  editor_ext.rs  gem.rs  kube.rs  maven.rs  mod.rs  npm_scripts.rs  pipe_guard.rs  pypi.rs  pypirc.rs  remote_dev_listener.rs  sbom.rs  ssh_config.rs
crates/mythkernel/src/updater/: abusech.rs  channels.rs  curated.rs  database.rs  delta_sig.rs  engine.rs  loldrivers.rs  mirrors.rs  mod.rs  nsrl.rs  scheduler.rs  yara_forge.rs
crates/mythkernel/src/usb/: device_history.rs  hid_anomaly.rs  mod.rs  power_only.rs  write_log.rs
crates/mythkernel/src/util/: bytes.rs  mod.rs  paths.rs  shell.rs
crates/mythkernel/src/walker/: apfs_clones.rs  bomb_guard.rs  dev_excludes.rs  diff.rs  dual_arch.rs  gitignore_filter.rs  hot_zones.rs  incremental.rs  loops.rs  mod.rs  multi_root.rs  multi_volume.rs  ntfs.rs  posix.rs  reflink.rs  remote.rs  resume.rs  snapshot.rs
crates/mythkernel/tests/: e2e_eicar.rs
crates/ui-bridge/: Cargo.toml
crates/ui-bridge/src/: commands.rs  commands_mac.rs  commands_mount.rs  commands_usb.rs  lib.rs  types.rs
daemon/mythd-linux/: Cargo.toml
daemon/mythd-linux/src/: audit.rs  block.rs  container_dedupe.rs  fanotify.rs  inotify_fallback.rs  ipc_client.rs  lib.rs  main.rs  mounts.rs  usb.rs  usb_ro.rs  watchdog.rs  wsl_peer.rs
daemon/mythd-linux/src/rules/: browser_creds.rs  honey.rs  mod.rs
daemon/mythd-macos/: Cargo.toml  Info.plist
daemon/mythd-macos/src/: esf_failover.rs  esf_notify.rs  exemption_keychain.rs  fsevents.rs  launchd.rs  lib.rs  main.rs  usb.rs  usb_ro.rs
daemon/mythd-macos/src/rules/: app_on_usb.rs  honey.rs  mod.rs
daemon/mythd-windows/: Cargo.toml
daemon/mythd-windows/src/: lib.rs  main.rs  usb.rs  wsl_bridge.rs
docs/: DAILY-CATCHUP-PROMPT.md  NSRL-REFRESH-PROMPT.md  PUBLISH-BLACKLIST-PROMPT.md  THREATFOX-INGEST-PROMPT.md  documentation.html  documents.html  index.html  macos-first-run.md
scripts/: bench-1m-files.ps1  bench-1m-files.sh  license-scrub-yara.ts  (+1 more)
(+278 files in other folders)
