[workspace]
resolver = "2"
members = [
    "crates/mythkernel",
    "crates/ui-bridge",
    "crates/mythctl",
    "apps/mythodikal/src-tauri",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["Mike Weaver <mythodikalone@gmail.com>"]
license-file = "LICENSE.md"
repository = "https://github.com/MikesRuthless12/mythodikal-av"
homepage = "https://mythodikal.com"

[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-single-instance = "2"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

clap = { version = "4", features = ["derive"] }

walkdir = "2"
rayon = "1"
crossbeam-channel = "0.5"

blake3 = "1"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"

rusqlite = { version = "0.32", features = ["bundled"] }

toml = "0.8"

memmap2 = "0.9"

# HTTPS client for feed updaters (TASK-022 / TASK-023). Per docs/prd.md § 1.5
# we use rustls-only — no openssl / native-tls dep tree.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate", "json"] }

# OS keychain access for the quarantine vault XOR key (TASK-024). Pure-Rust
# bindings to libsecret / macOS Keychain / Windows Credential Manager. Falls
# back to a file-based key store on platforms where the OS keychain is not
# reachable (CI / headless Linux without dbus).
keyring = "3"

# Per-install RNG for the quarantine XOR key (TASK-024).
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
