[workspace]
resolver = "2"
members = [
    "crates/mythkernel",
    "crates/ui-bridge",
    "crates/mythctl",
    "apps/mythodikal/src-tauri",
]
# `scripts/gen-signing-key` is a one-shot Tauri Updater minisign keypair
# generator (TASK-044). It's intentionally outside the workspace so its
# `minisign` dep doesn't pollute the engine's transitive license tree.
exclude = ["scripts/gen-signing-key"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["Mike Weaver <mythodikalone@gmail.com>"]
license-file = "LICENSE.md"
repository = "https://github.com/MikesRuthless12/mythodikal-av"
homepage = "https://mythodikal.com"

[workspace.dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
# TASK-044 / TASK-130 — engine self-update via Tauri Updater plugin (GitHub
# Releases endpoint, ed25519-verified bundles).
tauri-plugin-updater = "2"
# TASK-157 — start-with-OS auto-launch (registry/SMAppService/.desktop).
tauri-plugin-autostart = "2"
# TASK-158 / engine_update:restart_pending — graceful restart trigger from
# the tray menu after a successful self-update install.
tauri-plugin-process = "2"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

clap = { version = "4", features = ["derive", "env"] }

walkdir = "2"
rayon = "1"
crossbeam-channel = "0.5"

# TASK-130 — ed25519 signature verification for engine update bundles
# (Tauri Updater format is minisign / ed25519). We use the `minisign-verify`
# crate to get correct key-id binding, magic-byte checks, and both legacy
# + pre-hashed mode support — exactly the contract `tauri-plugin-updater`
# uses internally. Hand-rolled byte-slicing was security-audited and
# replaced with this dep (sec-review C1 + C2).
minisign-verify = "0.2"
base64 = "0.22"

# TASK-131 — `If-Modified-Since`/`ETag` parsing for unrestricted free pulls.
httpdate = "1"

blake3 = "1"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"

rusqlite = { version = "0.32", features = ["bundled"] }

toml = "0.8"

memmap2 = "0.9"

# HTTPS client for feed updaters (TASK-022 / TASK-023). Per docs/prd.md § 1.5
# we use rustls-only — no openssl / native-tls dep tree.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate", "json"] }

# OS keychain access for the quarantine vault XOR key (TASK-024). Pure-Rust
# bindings to libsecret / macOS Keychain / Windows Credential Manager. Falls
# back to a file-based key store on platforms where the OS keychain is not
# reachable (CI / headless Linux without dbus).
keyring = "3"

# Per-install RNG for the quarantine XOR key (TASK-024).
rand = "0.8"

# System load polling for the adaptive throttle (TASK-039). MIT-licensed,
# no default features so we get a minimal cross-platform CPU + memory
# reader and skip Windows DiskInfo etc. that we don't need yet.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
