[workspace]
resolver = "2"
members = [
    "crates/mythkernel",
    "crates/ui-bridge",
    "crates/mythctl",
    "apps/mythodikal/src-tauri",
]
# `scripts/gen-signing-key` is a one-shot Tauri Updater minisign keypair
# generator (TASK-044). It's intentionally outside the workspace so its
# `minisign` dep doesn't pollute the engine's transitive license tree.
exclude = ["scripts/gen-signing-key", "tools/feed-builder"]

[workspace.package]
version = "0.7.20"
edition = "2024"
rust-version = "1.85"
authors = ["Mike Weaver <mythodikalone@gmail.com>"]
license-file = "LICENSE.md"
repository = "https://github.com/MikesRuthless12/mythodikal-av"
homepage = "https://mythodikal.com"

[workspace.dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
# TASK-044 / TASK-130 — engine self-update via Tauri Updater plugin (GitHub
# Releases endpoint, ed25519-verified bundles).
tauri-plugin-updater = "2"
# TASK-157 — start-with-OS auto-launch (registry/SMAppService/.desktop).
tauri-plugin-autostart = "2"
# TASK-158 / engine_update:restart_pending — graceful restart trigger from
# the tray menu after a successful self-update install.
tauri-plugin-process = "2"
# Native folder/file picker dialog — Phase 6 Scan-target chooser.
tauri-plugin-dialog = "2"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

clap = { version = "4", features = ["derive", "env"] }

walkdir = "2"
rayon = "1"
crossbeam-channel = "0.5"
# Phase 6 — archive scanning. zip 4.x is the latest stable line (8.x
# is a recent breaking-change refactor; pinning to 4 keeps the API
# surface we wrote against while still getting the security fixes
# from the 3→4 hardening pass). RAR/7Z would require sevenz_rust +
# unrar separately; deferred to a follow-up since zip covers the
# dominant archive format malware ships in.
zip = { version = "4", default-features = false, features = ["deflate"] }
# Pure-Rust YARA. MIT-licensed, commercial-OK. No libyara C dep —
# `yara-x` is the official Rust port (VirusTotal). Powers the
# pattern-based detector with public rule packs like
# Neo23x0/signature-base.
yara-x = "1.16"

# TASK-050 / TASK-051 — futures::Stream + futures::channel::mpsc back the
# Windows USN journal subscriber pattern vendored from sister project
# Sourcerer. The NtfsWalker adapter drains the bootstrap stream into the
# existing crossbeam_channel<WalkEvent> shape so the rest of the engine
# is unaffected.
futures = "0.3"

# TASK-130 — ed25519 signature verification for engine update bundles
# (Tauri Updater format is minisign / ed25519). We use the `minisign-verify`
# crate to get correct key-id binding, magic-byte checks, and both legacy
# + pre-hashed mode support — exactly the contract `tauri-plugin-updater`
# uses internally. Hand-rolled byte-slicing was security-audited and
# replaced with this dep (sec-review C1 + C2).
minisign-verify = "0.2"
base64 = "0.22"

# TASK-131 — `If-Modified-Since`/`ETag` parsing for unrestricted free pulls.
httpdate = "1"

# `rayon` feature unlocks `blake3::Hasher::update_rayon` — multi-core
# tree-walking hash. For files >= 16 MiB this trees the work across
# every available core, turning a 1.5 GiB hash from ~1 s single-threaded
# (~5 GB/s) into ~150-300 ms on an 8-core machine.
blake3 = { version = "1", features = ["rayon"] }
# Hardware-accelerated CRC32 for the fast-screen detector (TASK / CRC32
# pre-screen). On modern x86 / ARMv8 with CRC32 instructions this hits
# ~5-10 GB/s — 2-4× faster than BLAKE3 — making it a cheap "definitely
# not in the malware set" filter before paying the BLAKE3 cost.
crc32fast = "1"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"

rusqlite = { version = "0.32", features = ["bundled"] }

toml = "0.8"

memmap2 = "0.9"

# HTTPS client for feed updaters (TASK-022 / TASK-023). Per docs/prd.md § 1.5
# we use rustls-only — no openssl / native-tls dep tree.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate", "json"] }

# OS keychain access for the quarantine vault XOR key (TASK-024). Pure-Rust
# bindings to libsecret / macOS Keychain / Windows Credential Manager. Falls
# back to a file-based key store on platforms where the OS keychain is not
# reachable (CI / headless Linux without dbus).
keyring = "3"

# Per-install RNG for the quarantine XOR key (TASK-024).
rand = "0.8"

# System load polling for the adaptive throttle (TASK-039). MIT-licensed,
# no default features so we get a minimal cross-platform CPU + memory
# reader and skip Windows DiskInfo etc. that we don't need yet.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
