[package]
name = "mythkernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mythodikal Anti-Virus engine core"
publish = false

[lib]
name = "mythkernel"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
walkdir = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
memmap2 = { workspace = true }
reqwest = { workspace = true }
keyring = { workspace = true }
rand = { workspace = true }
sysinfo = { workspace = true }
# TASK-130 — ed25519 verification on engine bundle signatures via the same
# minisign crate Tauri Updater uses internally.
minisign-verify = { workspace = true }
base64 = { workspace = true }
# TASK-131 — `If-Modified-Since` / `ETag` handling for the database channel.
httpdate = { workspace = true }

# TASK-050 — direct FSCTL wrappers (FSCTL_ENUM_USN_DATA + OpenFileById +
# GetFinalPathNameByHandleW). Pattern lifted from sister project Sourcerer
# (`crates/sourcerer-journal-win`). MIT/Apache-2.0 — license-clean per
# deny.toml allow-list.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

# TASK-050 — FSEvents subscriber for the macOS bootstrap walker.
# Vendored from Sourcerer's sourcerer-journal-mac crate.
#
# Sec-review L3 (deferred): `fsevent-sys` is on 4.x; the current crate is
# 5.x. No known RUSTSEC advisories on 4.x as of 2026-05; bump in a
# follow-up Phase 5 wave alongside other dep-current passes.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
fsevent-sys = "4"
libc = "0.2"

# TASK-050 — inotify+fanotify subscriber for the Linux bootstrap walker.
# Vendored from Sourcerer's sourcerer-journal-lin crate.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
default = []

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "walk"
harness = false

[[bench]]
name = "hash"
harness = false

# TASK-057 — Windows MFT vs PosixWalker compare. Runs on every host
# (the bench is OS-portable; the interesting curve appears on Windows).
[[bench]]
name = "win_mft"
harness = false
