[package]
name = "ui-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mythodikal Anti-Virus Tauri command bridge"
publish = false

[lib]
name = "ui_bridge"
path = "src/lib.rs"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mythkernel = { path = "../mythkernel" }
