[package]
name = "mythd-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mythodikal Anti-Virus Linux real-time daemon"
publish = false

[[bin]]
name = "mythd"
path = "src/main.rs"

[lib]
name = "mythd_linux"
path = "src/lib.rs"

[dependencies]
mythkernel = { path = "../../crates/mythkernel" }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
hex = { workspace = true }

# fanotify / udev / signal / eBPF surface — Linux-only. Each crate is
# pulled in only on cfg(target_os = "linux") so the workspace
# `cargo build` succeeds on Windows and macOS hosts even though the
# binary itself is meant to ship on Linux.
[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
