[package]
name = "freallyd-macos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Freally Anti-Virus macOS real-time daemon (NOTIFY-only)"
publish = false

# Per-OS binary name so all three daemons can build under `cargo
# build --workspace` without colliding on a shared output path.
# The launchd plist references the per-OS name directly.
[[bin]]
name = "freallyd-macos"
path = "src/main.rs"

[lib]
name = "freallyd_macos"
path = "src/lib.rs"

[dependencies]
freallykernel = { path = "../../crates/freallykernel" }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
hex = { workspace = true }

# IOKit / DiskArbitration surface — macOS-only. NOTIFY-only per § 1.5.4.
[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
