[package]
name = "mythd-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mythodikal Anti-Virus Windows real-time daemon (ETW + AMSI + WDAC; no kernel driver)"
publish = false

# Per-OS binary name so all three daemons can build under `cargo
# build --workspace` without colliding on a shared output path
# (`mythd.exe`). Windows installer / scheduled-task config
# references the per-OS name directly.
[[bin]]
name = "mythd-windows"
path = "src/main.rs"

[lib]
name = "mythd_windows"
path = "src/lib.rs"

[dependencies]
mythkernel = { path = "../../crates/mythkernel" }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
hex = { workspace = true }

# SetupDi + RegisterDeviceNotification + WSL bridge — Windows-only.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[dev-dependencies]
tempfile = "3"
